2008-10-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 556967 – fix editability of group headings

	* capplets/keybindings/gnome-keybinding-properties.c
	(description_set_func): Don't let section headings be editable.

2008-10-16  Davyd Madeley  <davyd@madeley.id.au>

	* po/POTFILES.in: readd to POTFILES.in

2008-10-16  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* font-viewer/Makefile.am:
	* Makefile.am:
	- hook gnome-font-viewer and gnome-thumbnail font back into the build
	- need to check to see if the strings were lost from the translations

2008-10-15  Davyd Madeley  <davyd@madeley.id.au>

	* vfs-methods/: remove properly
	* font-viewer/: resurrect gnome-font-viewer and gnome-thumbnail-font
	  from revision 8786 (not yet added to toplevel Makefile)

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.1.

==================== 2.24.0.1 ====================

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.24.0.1

2008-09-22  Sebastien Bacher  <seb128@ubuntu.com>

	* configure.in, NEWS: 2.24.0 update

2008-09-15  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Nirbheek Chauhan <nirbheek.chauhan@gmail.com>

	* configure.in: add --without-libcanberra to skip building the sound
	capplet (bug #551765)

2008-09-05  Rodrigo Moya <rodrigo@gnome-db.org>

	Patch by Nirbheek Chauhan

	* configure.in:
	* capplets/appearance/appearance-themes.c:
	* capplets/appearance/appearance.h: removed last gnome-vfs leftovers.

2008-08-28  Claude Paroz  <claude@2xlibre.net>

	* configure.in: require glib 2.17.4 for using the NC_ macro in sound
	capplet.

2008-08-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: updated for 2.23.90.

2008-08-11  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: require gnome-desktop 2.23.90

2008-08-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* NEWS:
	* configure.in: updated for 2.23.6.

2008-07-30  Jens Granseuer  <jensgr@gmx.net>
